--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,10 @@ body {
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
 }
 
+.btn-margin {
+  margin-right: 5rem;
+}
+
 .history-list {
   display: flex;
   flex-direction: column;
